syntax = "proto3";

package aperture.policy.decisions.v1;

import "aperture/common/tick/v1/tick.proto";

message LoadDecision {
  double load_multiplier = 1;
  bool pass_through = 2;
  common.tick.v1.TickInfo tick_info = 3;
}

message TokensDecision {
  // Key is workload index and value is tokens.
  map<string, uint64> tokens_by_workload_index = 1;
}

message RateLimiterDecision {
  double limit = 1;
}
